update style.css and index.html

--- a/index.html
+++ b/index.html
@@ -556,6 +556,14 @@
                     movieSlide.addEventListener('mouseout', () => {
                         movieSlide.querySelector('.trending-hover-title').style.opacity = 0;
                     });
+
+                    // add mobile touch event
+                    movieSlide.addEventListener('touchstart', () => {
+                        movieSlide.querySelector('.trending-hover-title').style.opacity = 1;
+                    });
+                    movieSlide.addEventListener('touchend', () => {
+                        movieSlide.querySelector('.trending-hover-title').style.opacity = 0;
+                    });
                 });
             });
         }
