update index.html and watch.html

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </div>
                     <div class="movie-slide-gradient">
                         <div class="movie-slide-content">
-                            <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                            <img src="assets/image/poster_placeholder.png"
                                 alt="Movie Poster" class="movie-slide-poster">
                             <div class="movie-slide-details">
                                 <h3 class="movie-slide-title">Movie Title</h3>
@@ -217,7 +217,7 @@
                     </div>
                     <div class="movie-slide-gradient">
                         <div class="movie-slide-content">
-                            <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                            <img src="assets/image/poster_placeholder.png"
                                 alt="Movie Poster" class="movie-slide-poster">
                             <div class="movie-slide-details">
                                 <h3 class="movie-slide-title">Movie Title</h3>
