--- a/watch.html
+++ b/watch.html
@@ -363,7 +363,7 @@
     <div class="banner">
         <img src="./assets/image/7bdh8bG.jpg" class="bg" alt="bg img">
         <div class="content">
-            <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+            <img src="assets/image/poster_placeholder.png"
                 alt="movie name" class="movieTitle">
             <h4>
                 <span>2020</span>
@@ -404,7 +404,7 @@
         <div class="swiper-wrapper">
             <!-- make a new movie swiper (leave the old one at the top as it is and the css with it) with smaller cards like the netflix popular movies, with multiple slides on one page. there should not be a banner, only movie poster and title, rating and watch now button. the title and details should be at the bottom with a gradient overlay. to avoid any errors give the custom css a new class name like trending-slide -->
             <div class="trending-slide swiper-slide">
-                <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                <img src="assets/image/poster_placeholder.png"
                     alt="Movie Poster" class="movie-slide-poster">
                 <div class="trending-shadow"></div>
                 <div class="trending-shadow2"></div>
@@ -428,7 +428,7 @@
             </div>
 
             <div class="trending-slide swiper-slide">
-                <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                <img src="assets/image/poster_placeholder.png"
                     alt="Movie Poster" class="movie-slide-poster">
                 <div class="trending-shadow"></div>
                 <div class="trending-shadow2"></div>
@@ -452,7 +452,7 @@
             </div>
 
             <div class="trending-slide swiper-slide">
-                <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                <img src="assets/image/poster_placeholder.png"
                     alt="Movie Poster" class="movie-slide-poster">
                 <div class="trending-shadow"></div>
                 <div class="trending-shadow2"></div>
@@ -476,7 +476,7 @@
             </div>
 
             <div class="trending-slide swiper-slide">
-                <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                <img src="assets/image/poster_placeholder.png"
                     alt="Movie Poster" class="movie-slide-poster">
                 <div class="trending-shadow"></div>
                 <div class="trending-shadow2"></div>
@@ -500,7 +500,7 @@
             </div>
 
             <div class="trending-slide swiper-slide">
-                <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                <img src="assets/image/poster_placeholder.png"
                     alt="Movie Poster" class="movie-slide-poster">
                 <div class="trending-shadow"></div>
                 <div class="trending-shadow2"></div>
@@ -524,7 +524,7 @@
             </div>
 
             <div class="trending-slide swiper-slide">
-                <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                <img src="assets/image/poster_placeholder.png"
                     alt="Movie Poster" class="movie-slide-poster">
                 <div class="trending-shadow"></div>
                 <div class="trending-shadow2"></div>
@@ -548,7 +548,7 @@
             </div>
 
             <div class="trending-slide swiper-slide">
-                <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                <img src="assets/image/poster_placeholder.png"
                     alt="Movie Poster" class="movie-slide-poster">
                 <div class="trending-shadow"></div>
                 <div class="trending-shadow2"></div>
@@ -572,7 +572,7 @@
             </div>
 
             <div class="trending-slide swiper-slide">
-                <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                <img src="assets/image/poster_placeholder.png"
                     alt="Movie Poster" class="movie-slide-poster">
                 <div class="trending-shadow"></div>
                 <div class="trending-shadow2"></div>
@@ -596,7 +596,7 @@
             </div>
 
             <div class="trending-slide swiper-slide">
-                <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                <img src="assets/image/poster_placeholder.png"
                     alt="Movie Poster" class="movie-slide-poster">
                 <div class="trending-shadow"></div>
                 <div class="trending-shadow2"></div>
@@ -620,7 +620,7 @@
             </div>
 
             <div class="trending-slide swiper-slide">
-                <img src="https://m.media-amazon.com/images/M/MV5BNzIwNGY4YzItNWQ3ZS00ZmUwLTg3NTUtZmZkMWNlNGQ0Y2I2XkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_QL75_UX280_CR0,0,280,414_.jpg"
+                <img src="assets/image/poster_placeholder.png"
                     alt="Movie Poster" class="movie-slide-poster">
                 <div class="trending-shadow"></div>
                 <div class="trending-shadow2"></div>
