update index.html and watch.html

--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
             <div class="swiper-slide">
                 <div class="movie-slide">
                     <div class="movie-slide-bg"
-                        style="background-image: url('https://m.media-amazon.com/images/M/MV5BNDU0MWNiM2UtYWYxNi00ZWJiLTg5MGYtNjhmM2Q3MzA4YzI2XkEyXkFqcGdeQWFsZWxvZw@@._V1_QL40_QL75_UX1000_CR0,0,1000,563_.jpg');">
+                        style="background-image: url('assets/image/banner_placeholder.png');">
                     </div>
                     <div class="movie-slide-gradient">
                         <div class="movie-slide-content">
-                            <img src="assets/image/poster_placeholder.png"
+                            <img src="assets/image/label_poster_placeholder.png"
                                 alt="Movie Poster" class="movie-slide-poster">
                             <div class="movie-slide-details">
                                 <h3 class="movie-slide-title">Movie Title</h3>
@@ -213,11 +213,11 @@
             <div class="swiper-slide">
                 <div class="movie-slide">
                     <div class="movie-slide-bg"
-                        style="background-image: url('https://m.media-amazon.com/images/M/MV5BNDU0MWNiM2UtYWYxNi00ZWJiLTg5MGYtNjhmM2Q3MzA4YzI2XkEyXkFqcGdeQWFsZWxvZw@@._V1_QL40_QL75_UX1000_CR0,0,1000,563_.jpg');">
+                        style="background-image: url('assets/image/banner_placeholder.png');">
                     </div>
                     <div class="movie-slide-gradient">
                         <div class="movie-slide-content">
-                            <img src="assets/image/poster_placeholder.png"
+                            <img src="assets/image/label_poster_placeholder.png"
                                 alt="Movie Poster" class="movie-slide-poster">
                             <div class="movie-slide-details">
                                 <h3 class="movie-slide-title">Movie Title</h3>
