--- a/watch.html
+++ b/watch.html
@@ -184,6 +184,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            filter: brightness(0.5);
         }
 
         .content {
@@ -361,9 +362,10 @@
     </style>
 
     <div class="banner">
-        <img src="./assets/image/7bdh8bG.jpg" class="bg" alt="bg img">
+        <!-- <img src="./assets/image/7bdh8bG.jpg" class="bg" alt="bg img"> -->
+        <img src="./assets/image/banner_placeholder.png" class="bg" alt="bg img">
         <div class="content">
-            <img src="assets/image/poster_placeholder.png"
+            <img src="assets/image/label_poster_placeholder.png"
                 alt="movie name" class="movieTitle">
             <h4>
                 <span>2020</span>
