update README.md and about.html

--- a/about.html
+++ b/about.html
@@ -88,9 +88,6 @@
                 <p><span id="ofme4">-- -- -- -- @ ---- . ---</span></p>
                 <!-- I obfuscated my email address with a very simple JavaScript function :) -->
 
-                <h2>Important Information</h2>
-                <p>This website is not affiliated with IMDb, TMDb, Letterboxd, Netflix or any other movie library website. It uses TMDb API to get movie information and images.</p>
-
                 <h2>Privacy Policy</h2>
                 <p>This website does NOT collect and/or send any personal or device information back to the developer of
                     the website. Your data is stored locally on your device. Your data will not be used in any way,
@@ -100,40 +97,57 @@
                 <p>This website is provided "as is" and "as available" without any warranty of any kind. The developer
                     of the website is not responsible for any possible damages, inconveniences, or other mishaps that
                     occur as a result of the use of the website.</p>
+
+                <h2>Thanks and Credits to:</h2>
+                <ul>
+                    <li>Logo: <a href="https://icons8.com/">Icons8</a></li>
+                    <li>API: <a href="https://www.themoviedb.org/">The Movie Database (TMDb)</a></li>
+                    <li>Inspiration: <a href="https://www.imdb.com/">IMDb</a>, <a
+                            href="https://letterboxd.com/">Letterboxd</a>, <a href="https://netflix.com">Netflix</a>
+                    </li>
+                    <li>Icons: <a href="https://fontawesome.com/">FontAwesome</a>, <a
+                            href="https://icons8.com/">Icons8</a></li>
+                    <li>Slider: <a href="https://swiperjs.com/">Swiper</a></li>
+                    <li>CSS Framework: <a href="https://getbootstrap.com/">Bootstrap</a> ( <a
+                            href="https://bootswatch.com/">Cyborg BootswatchTheme</a> )</li>
+                    <li>JavaScript Library: <a href="https://jquery.com/">jQuery</a></li>
+                </ul>
+                <h2>Important Information</h2>
+                <p>This website is not affiliated with IMDb, TMDb, Letterboxd, Netflix or any other listed service/website.</p>
+
             </div>
         </div>
     </div>
 
 
-                <footer>
-                    <div class="container">
-                        <div class="social-link">
-                            <ul class="">
-                                <li><a href="https://go.jm26.net/jm"><i class="fas fa-globe"></i></a></li>
-                                <li><a href="https://github.com/JMcrafter26/JMovies"><i class="fab fa-github"></i></a>
-                                </li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="social-link">
-                            <ul class="d-flex list-none">
-                                <li><a href="./">Home</a></li>
-                                <li><a href="./about.html">About</a></li>
-                            </ul>
-                        </div>
-                        <div class="copyright">
-                            <p>© <span id="year"></span> JM26.NET</p>
-                            <p>Designed by John M. aka <a href="https://go.jm26.net/github">JMcrafter26</a>
-                        </div>
-                    </div>
-                </footer>
+    <footer>
+        <div class="container">
+            <div class="social-link">
+                <ul class="">
+                    <li><a href="https://go.jm26.net/jm"><i class="fas fa-globe"></i></a></li>
+                    <li><a href="https://github.com/JMcrafter26/JMovies"><i class="fab fa-github"></i></a>
+                    </li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+            </div>
+            <div class="social-link">
+                <ul class="d-flex list-none">
+                    <li><a href="./">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                </ul>
+            </div>
+            <div class="copyright">
+                <p>© <span id="year"></span> JM26.NET</p>
+                <p>Designed by John M. aka <a href="https://go.jm26.net/github">JMcrafter26</a>
+            </div>
+        </div>
+    </footer>
 
 
-                <script src="assets/js/loadjs.min.js"></script>
-                <script src="assets/js/init.js"></script>
+    <script src="assets/js/loadjs.min.js"></script>
+    <script src="assets/js/init.js"></script>
 
 
 </body>
-
 </html>
